@@ -2,6 +2,12 @@ fidoconfig 0.7
 --------------
 
 ----- cvs ci ------
+Sun Apr 25 19:26:39 CEST 1999
+Antonio:
++ Fixed bug in stripComment() if comment line had more than one '#'.
++ Some fixes in tparser.
+
+----- cvs ci ------
 Sun Apr 18 20:36:56 CEST 1999
 Mtt:
 + fixed wrong Documentation. Please do a make next time.
